<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@+id/navigation_dashboard">

    <fragment
        android:id="@+id/navigation_profile"
        android:name="revolhope.splanes.com.aikver.presentation.feature.menu.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="revolhope.splanes.com.aikver.presentation.feature.menu.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_search_content"
        android:name="revolhope.splanes.com.aikver.presentation.feature.menu.searchcontent.SearchContentFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search_content" />
</navigation>
