<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:padding="@dimen/margin_24dp">

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/margin_20dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toTopOf="@id/addButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/rootLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/card_outlined_white"
            android:padding="@dimen/margin_20dp">

            <TextView
                android:id="@+id/infoTextView"
                style="@style/Text.SemiBold"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_8dp"
                android:layout_marginEnd="@dimen/margin_8dp"
                android:text="@string/content_additional_info_title"
                android:textColor="@color/whiteAlpha90"
                android:textSize="@dimen/text_18"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_margin="@dimen/margin_8dp"
                android:background="@color/whiteAlpha50"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/infoTextView" />

            <TextView
                android:id="@+id/contentSeenTextView"
                style="@style/Text.SemiBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_8dp"
                android:layout_marginTop="@dimen/margin_30dp"
                android:text="@string/content_seen"
                android:textColor="@color/whiteAlpha90"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/infoTextView" />

            <revolhope.splanes.com.aikver.presentation.common.widget.switcher.SwitcherView
                android:id="@+id/contentSeenSwitcher"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_8dp"
                android:layout_marginEnd="@dimen/margin_8dp"
                app:defaultOptionSelected="right"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/contentSeenTextView"
                app:layout_constraintTop_toTopOf="@id/contentSeenTextView"
                app:layout_constraintBottom_toBottomOf="@id/contentSeenTextView"
                app:leftOption="@string/yes"
                app:rightOption="@string/no" />

            <TextView
                android:id="@+id/punctuationTextView"
                style="@style/Text.SemiBold"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_8dp"
                android:layout_marginTop="@dimen/margin_8dp"
                android:layout_marginEnd="@dimen/margin_8dp"
                android:text="@string/punctuation"
                android:textColor="@color/whiteAlpha90"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/contentSeenSwitcher" />

            <revolhope.splanes.com.aikver.presentation.common.widget.ScoreView
                android:id="@+id/punctuationView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_8dp"
                android:layout_marginTop="@dimen/margin_8dp"
                android:layout_marginEnd="@dimen/margin_8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/punctuationTextView" />

            <TextView
                android:id="@+id/networkTextView"
                style="@style/Text.SemiBold"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_8dp"
                android:layout_marginTop="@dimen/margin_8dp"
                android:layout_marginEnd="@dimen/margin_8dp"
                android:text="@string/serie_network"
                android:textColor="@color/whiteAlpha90"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/punctuationView" />

            <revolhope.splanes.com.aikver.presentation.common.widget.networkselector.NetworkSelector
                android:id="@+id/networkSelector"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_8dp"
                android:layout_marginTop="@dimen/margin_8dp"
                android:layout_marginEnd="@dimen/margin_8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/networkTextView" />

            <TextView
                android:id="@+id/commentsTextView"
                style="@style/Text.SemiBold"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_8dp"
                android:layout_marginTop="@dimen/margin_8dp"
                android:layout_marginEnd="@dimen/margin_8dp"
                android:text="@string/content_comments_title"
                android:textColor="@color/whiteAlpha90"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/networkSelector" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/commentLayout"
                style="@style/AppTextInputLayout.White"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_8dp"
                android:layout_marginTop="@dimen/margin_12dp"
                android:layout_marginEnd="@dimen/margin_8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/commentsTextView">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/commentInputEditText"
                    style="@style/AppTextInputText.White"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/comment_hint" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.constraintlayout.widget.Group
                android:id="@+id/punctuationGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:constraint_referenced_ids="punctuationTextView, punctuationView" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <Button
        android:id="@+id/addButton"
        style="@style/AppButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:text="@string/add"
        android:textColor="@color/whiteAlpha90"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:rippleColor="@color/colorAccent"
        app:strokeColor="@color/whiteAlpha90" />
</androidx.constraintlayout.widget.ConstraintLayout>