<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingTop="@dimen/margin_15dp"
    android:paddingStart="@dimen/margin_20dp"
    android:paddingEnd="@dimen/margin_20dp"
    android:paddingBottom="@dimen/margin_15dp">

    <TextView
        android:id="@+id/popupTitle"
        style="@style/Text.Bold"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/profile_add_member_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textLayout"
        style="@style/Widget.Design.TextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_20dp"
        app:layout_constraintTop_toBottomOf="@id/popupTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInput"
            style="@style/AppTextInputText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="14dp"
            android:hint="@string/profile_add_member_hint"/>

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/popupNegativeButton"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_20dp"
        android:text="@string/cancel"
        android:textSize="14dp"
        android:textAllCaps="false"
        android:background="@android:color/transparent"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textLayout"/>

    <View
        android:id="@+id/popupSeparator"
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:background="@color/backgroundLight"
        android:layout_marginStart="@dimen/margin_5dp"
        android:layout_marginEnd="@dimen/margin_5dp"
        app:layout_constraintStart_toEndOf="@id/popupNegativeButton"
        app:layout_constraintEnd_toStartOf="@id/popupPositiveButton"
        app:layout_constraintTop_toTopOf="@id/popupPositiveButton"
        app:layout_constraintBottom_toBottomOf="@id/popupPositiveButton"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/popupPositiveButton"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_20dp"
        android:text="@string/done"
        android:textSize="14dp"
        android:textAllCaps="false"
        android:background="@android:color/transparent"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textLayout"/>

</androidx.constraintlayout.widget.ConstraintLayout>