<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/logo"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_marginTop="@dimen/margin_10dp"
            app:lottie_rawRes="@raw/anim_tv"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/usernameDescriptionTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_30dp"
            android:layout_marginEnd="@dimen/margin_30dp"
            android:layout_marginTop="@dimen/margin_30dp"
            android:text="@string/register_username_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/logo"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/usernameInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_20dp"
            android:layout_marginBottom="@dimen/margin_20dp"
            android:layout_marginStart="@dimen/margin_30dp"
            android:layout_marginEnd="@dimen/margin_30dp"
            app:boxStrokeColor="@color/colorPrimaryDark"
            app:hintTextColor="@color/colorPrimaryDark"
            app:layout_constraintTop_toBottomOf="@id/usernameDescriptionTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/usernameInputEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/register_user_field_hint"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/groupDescriptionTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_30dp"
            android:layout_marginEnd="@dimen/margin_30dp"
            android:layout_marginTop="@dimen/margin_30dp"
            android:text="@string/register_group_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/usernameInputLayout"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/groupInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_20dp"
            android:layout_marginBottom="@dimen/margin_20dp"
            android:layout_marginStart="@dimen/margin_30dp"
            android:layout_marginEnd="@dimen/margin_30dp"
            app:boxStrokeColor="@color/colorPrimaryDark"
            app:hintTextColor="@color/colorPrimaryDark"
            app:layout_constraintTop_toBottomOf="@id/groupDescriptionTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/groupInputEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/register_group_field_hint"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/optionalHint"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_5dp"
            android:ellipsize="end"
            android:text="@string/optional_field"
            android:textSize="@dimen/text_12"
            app:layout_constraintTop_toBottomOf="@id/groupInputLayout"
            app:layout_constraintStart_toStartOf="@id/groupInputLayout"
            app:layout_constraintEnd_toEndOf="@id/groupInputLayout" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/submitButton"
            style="@style/AppButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_30dp"
            android:layout_marginBottom="@dimen/size_40dp"
            android:text="@string/done"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/optionalHint" />

        <revolhope.splanes.com.aikver.presentation.common.widget.AppLoader
            android:id="@+id/appLoader"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>